# codebase

./: README.md  app.py  contextfocus_backend.py  prompt.txt  pyproject.toml  pyrightconfig.json  requirements.txt
artifacts/: confiaq_results_olddyna.json  confiaq_results_static.json
artifacts/gemma3_4b/: best_layer.json  layer_sweep.json  vectors_meta.json
artifacts/gemma3_4b/vectors/: layer_000.pt  layer_001.pt  layer_002.pt  layer_003.pt  layer_004.pt  layer_005.pt  layer_006.pt  layer_007.pt  layer_008.pt  layer_009.pt  layer_010.pt  layer_011.pt  layer_012.pt  layer_013.pt  layer_014.pt  layer_015.pt  layer_016.pt  layer_017.pt  layer_018.pt  layer_019.pt  layer_020.pt  layer_021.pt  layer_022.pt  layer_023.pt  layer_024.pt  layer_025.pt  layer_026.pt  layer_027.pt  layer_028.pt  layer_029.pt  layer_030.pt  layer_031.pt  layer_032.pt  layer_033.pt
scripts/: build_vectors.py  demo_budgeted_search.py  eval_confiaq.py  plot_confiaq_results.py  select_layer.py  train_reft.py
